--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import Plyr styles */
+@import './plyr.css';
+
 /* @layer base {
   .dark {
     --background: 0 0% 100%;
