--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -139,7 +139,8 @@
 }
 
 ::-webkit-scrollbar {
-  /* display: none; */
+  width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -355,4 +356,9 @@ img {
 
 .gradient {
   background: conic-gradient(from 230.29deg at 51.63% 52.16%, rgb(36, 0, 255) 0deg, rgb(0, 135, 255) 67.5deg, rgb(108, 39, 157) 198.75deg, rgb(24, 38, 163) 251.25deg, rgb(54, 103, 196) 301.88deg, rgb(105, 30, 255) 360deg);
+}
+
+html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
